--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "frank-heath",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "lovely-oasis",
    "metadata": {},
    "outputs": [
@@ -485,15 +485,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The house with address: Parla is the cheapest ad its price is 0\n"
+      "The house with address: Berlin, Coslada is the cheapest and its price is: €600\n"
      ]
     }
    ],
    "source": [
-    "min_price= (ds['price'].min())\n",
-    "idx_min = ds['price'].idxmin()\n",
-    "address1 = ds.loc[idx_min,'address']\n",
-    "print(f\"The house with address:\", address1 , \"is the cheapest ad its price is\" , min_price)\n"
+    "index_of_min = ds[ds['price'] > 0]['price'].idxmin()\n",
+    "min_price = ds.loc[index_of_min, 'price']\n",
+    "address = ds.loc[index_of_min, 'address']\n",
+    "\n",
+    "print(f'The house with address: {address} is the cheapest and its price is: €{min_price}')"
    ]
   },
   {
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "every-tiffany",
    "metadata": {},
    "outputs": [
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "exciting-accreditation",
    "metadata": {},
    "outputs": [
@@ -608,10 +609,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "administrative-roads",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RangeIndex(start=0, stop=15335, step=1)\n",
+      "RangeIndex(start=0, stop=15335, step=1)\n"
+     ]
+    }
+   ],
    "source": [
     "ds2 = ds.fillna(0)\n",
     "print(ds.index) \n",
@@ -1290,10 +1300,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "civic-meditation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1        0.000000\n",
+      "3        0.000000\n",
+      "161      0.375312\n",
+      "214      0.236908\n",
+      "219      0.186209\n",
+      "           ...   \n",
+      "15274    0.122195\n",
+      "15275    0.122195\n",
+      "15305    0.201995\n",
+      "15322    0.057357\n",
+      "15325    0.314214\n",
+      "Name: price, Length: 233, dtype: float64\n",
+      "94       0.440678\n",
+      "189      0.000000\n",
+      "193      0.135593\n",
+      "272      0.335593\n",
+      "328      0.559329\n",
+      "           ...   \n",
+      "15015    0.091525\n",
+      "15024    0.338644\n",
+      "15238    0.050678\n",
+      "15263    0.559329\n",
+      "15291    0.371186\n",
+      "Name: price, Length: 194, dtype: float64\n",
+      "169      0.276190\n",
+      "232      0.130857\n",
+      "233      0.129048\n",
+      "269      0.095143\n",
+      "381      0.433333\n",
+      "           ...   \n",
+      "14999    0.347619\n",
+      "15002    0.270944\n",
+      "15034    0.425714\n",
+      "15087    0.339200\n",
+      "15117    0.392857\n",
+      "Name: price, Length: 290, dtype: float64\n",
+      "85       0.018055\n",
+      "109      0.388468\n",
+      "765      0.182295\n",
+      "816      0.241701\n",
+      "827      0.033081\n",
+      "           ...   \n",
+      "14896    0.050670\n",
+      "15144    0.277810\n",
+      "15166    0.097263\n",
+      "15191    0.263832\n",
+      "15223    0.192778\n",
+      "Name: price, Length: 190, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "ciudades1 = ds[ds[\"level5\"].isin([\"Fuenlabrada\",\"Leganés\",\"Getafe\",\"Alcorcón\"])]\n",
     "\n",
@@ -1501,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "present-mistress",
    "metadata": {},
    "outputs": [],
